<resources>
    <string name="app_name">PillingApp</string>
    <string name="action_home">Home</string>
    <string name="action_bill">Bill</string>
    <string name="action_contract">Contract</string>
    <string name="action_account">Account</string>
    <string name="action_setting">Setting</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>