<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/action_home"
        android:title="@string/action_home"
        android:icon="@drawable/home_white_36dp"/>
    <item android:id="@+id/action_bill"
        android:title="@string/action_bill"
        android:icon="@drawable/dynamic_form_white_36dp"/>
    <item android:id="@+id/action_contract"
        android:title="@string/action_contract"
        android:icon="@drawable/receipt_long_white_36dp"/>
    <item android:id="@+id/action_account"
        android:title="@string/action_account"
        android:icon="@drawable/account_circle_white_36dp"/>
    <item android:id="@+id/action_setting"
        android:title="@string/action_setting"
        android:icon="@drawable/settings_white_36dp"/>
</menu>